# termite

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: aabb2d.h.23555359A791A88C.idx  affine-mat.h.F23F2CE4E9E37FBD.idx  affine-post.h.5AE20278622BEE26.idx  affine-pre.h.0B8EE99C647DA67E.idx  affine.h.41F5D891982F54D9.idx  affine.h.D128E5A9EB9C083A.idx  affine2d-post.h.2698156CBF7A6770.idx  affine2d.h.8F5E3A8A713B9434.idx  bezier.h.B08D9A14F6DC7A66.idx  box.h.B6C799DCB7184EC8.idx  cam.h.A3EA90AA14E8368E.idx  cglm.h.C1AF5C25671F81C0.idx  color.h.F733BA1B34B0E0D4.idx  common.h.D94DCEFC361D3D5F.idx  curve.h.1B4A5A9F46AE05BA.idx  ease.h.CE45EDD31357E01F.idx  esc_seq.h.5B467B7D6C8EE38C.idx  euler.h.E63003539B33C06A.idx  euler_to_quat_rh.h.EE1D4FF633A5A796.idx  freetype.h.485FD1B9C095F180.idx  frustum.h.0E24D8472E0CFFCE.idx  ft2build.h.28272D92A134FF25.idx  ftconfig.h.BCB45D90C265CE7C.idx  fterrdef.h.463FE1701D65D90C.idx  fterrors.h.3739012B55C06A64.idx  ftheader.h.0BFDC3753E63055B.idx  ftimage.h.60DC1DA469C732F5.idx  ftmoderr.h.72509312629DC9A4.idx  ftoption.h.C92E5FC9D28667B9.idx  ftstdlib.h.8100A462A67C022A.idx  ftsystem.h.ADA68F0A7AD331FA.idx  fttypes.h.7E86C6ACFF5D527C.idx  glad.c.84D7EE5DB2508492.idx  glad.h.F68F1C70251DA491.idx  glfw3.h.5BE60D4726B2DE83.idx  intrin.h.96FE1FBC5E4BEC70.idx  io.h.7BF8849B550DAFC4.idx  ivec2.h.B9FCD6ECB8B9EADA.idx  ivec3.h.22FC255873DDD523.idx  ivec4.h.F6F26375BA9970BC.idx  (+41 more)
include/: app.h  esc_seq.h  pty_wrap.h  shader.h  terminal.h  text.h  window.h
include/cglm/: mat2.h
include/glad/: glad.h
src/: app.c  esc_seq.c  fragment.glsl  glad.c  main.c  pty_wrap.c  shader.c  terminal.c  text.c  window.c
src/.cache/clangd/index/: main.c.FCB18394A5587D23.idx
